# vulkan_browser_engine

./: .gitignore  Cargo.toml  Makefile.toml  README.md  SECURITY.md  Setup.bat  install.bat  install.sh
.cargo/: config.toml
.github/workflows/: ci-cd.yml  security.yml  test.yml
docker/: Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md
examples/: basic_browser.rs  digital_signage.rs  embedded_browser.rs  headless_renderer.rs  pwa_runtime.rs
k8s/: deployment.yaml  ingress.yaml  service.yaml
resources/shaders/: culling.comp  fragment.glsl  postprocess.frag  text.frag  text.vert  vertex.glsl
scripts/: admin-tools.sh  build-shaders.sh  setup-dev.sh
src/: lib.rs  main.rs
src/core/: mod.rs
src/core/css/: computed.rs  mod.rs  parser.rs  selector.rs
src/core/dom/: document.rs  element.rs  mod.rs  node.rs
src/core/events/: mod.rs  system.rs
src/core/layout/: engine.rs  flexbox.rs  grid.rs  mod.rs
src/core/network/: fetch.rs  mod.rs
src/js_engine/: mod.rs
src/js_engine/gc/: heap.rs  mod.rs
src/js_engine/jit/: mod.rs  optimizer.rs
src/js_engine/modules/: mod.rs  resolver.rs
src/js_engine/v8_binding/: callbacks.rs  mod.rs
src/platform/: mod.rs
src/platform/linux/: mod.rs  window.rs
src/platform/macos/: mod.rs  window.rs
src/platform/windows/: mod.rs  window.rs
src/pwa/: mod.rs
src/pwa/cache/: mod.rs  strategy.rs
src/pwa/manifest/: mod.rs  parser.rs
src/pwa/service_worker/: mod.rs  runtime.rs
src/pwa/storage/: mod.rs  quota.rs
src/renderer/: mod.rs
src/renderer/gpu/: buffer.rs  mod.rs  texture.rs
src/renderer/image/: loader.rs  mod.rs
src/renderer/pipeline/: cache.rs  mod.rs
src/renderer/text/: atlas.rs  mod.rs
src/renderer/vulkan/: command.rs  device.rs  mod.rs  shaders.rs
src/sandbox/: mod.rs
src/sandbox/ipc/: channel.rs  mod.rs
src/sandbox/permissions/: audit.rs  mod.rs
src/sandbox/process/: manager.rs  mod.rs
src/sandbox/security/: mod.rs  policy.rs
terraform/: main.tf  outputs.tf  variables.tf
tests/benchmark/: dom_bench.rs  js_bench.rs  mod.rs  render_bench.rs
tests/e2e/: navigation_test.rs  pwa_test.rs
tests/integration/: browser_test.rs  pwa_test.rs
tests/unit/: dom_test.rs  js_engine_test.rs  renderer_test.rs
