[package]
name = "vulkan_browser_engine"
version = "0.1.0"
edition = "2021"
authors = ["Browser Engine Team"]
description = "High-performance browser engine with Vulkan rendering and JIT compilation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/browser-engine/vulkan-browser"
rust-version = "1.75"

[features]
default = ["vulkan", "jit", "pwa", "sandbox"]
vulkan = ["dep:ash", "dep:gpu-allocator"]
jit = ["dep:cranelift", "dep:cranelift-codegen", "dep:cranelift-frontend", "dep:cranelift-jit", "dep:cranelift-module"]
pwa = ["indexeddb", "cache_api", "manifest_parser"]
indexeddb = ["dep:sled"]
cache_api = ["dep:moka"]
manifest_parser = []
sandbox = ["dep:nix", "dep:seccomp-sys"]
hardware_apis = ["serial", "usb", "bluetooth"]
serial = ["dep:serialport"]
usb = ["dep:rusb"]
bluetooth = ["dep:btleplug"]
tracy = ["dep:tracy-client"]
debug = ["tracy"]

[dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "net", "io-util"] }
async-trait = "0.1.77"
futures = "0.3.30"
parking_lot = "0.12.1"
crossbeam = "0.8.4"
rayon = "1.8.1"

serde = { version = "1.0.196", features = ["derive", "rc"] }
serde_json = "1.0.113"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
thiserror = "1.0.57"
anyhow = "1.0.80"
ring = "0.17.13"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
metrics = "0.22.1"
once_cell = "1.19.0"

dashmap = "5.5.3"
smallvec = { version = "1.13.1", features = ["serde"] }
ahash = "0.8.8"
lru = "0.12.2"

ash = { version = "0.37.3", optional = true }
gpu-allocator = { version = "0.25.0", features = ["vulkan"], optional = true }
winit = "0.29.10"
raw-window-handle = "0.6.0"

cranelift = { version = "0.105.4", optional = true }
cranelift-codegen = { version = "0.105.4", optional = true }
cranelift-frontend = { version = "0.105.4", optional = true }
cranelift-jit = { version = "0.105.4", optional = true }
cranelift-module = { version = "0.105.4", optional = true }
target-lexicon = "0.12.13"

v8 = "0.89.0"
html5ever = "0.26.0"
css-color = "0.2.7"
cssparser = "0.31.2"
selectors = "0.29.0"

url = "2.5.0"
mime = "0.3.17"
encoding_rs = "0.8.33"

fontdb = "0.16.2"
rustybuzz = "0.12.1"
ttf-parser = "0.20.0"
swash = "0.1.12"
rusttype = "0.9.3"

image = { version = "0.24.8", features = ["jpeg", "png", "webp", "gif", "ico", "bmp"] }
resvg = { version = "0.38.0", features = ["text"] }

reqwest = { version = "0.11.24", features = ["json", "stream", "rustls-tls", "gzip", "brotli", "deflate"] }
hyper = { version = "1.1.0", features = ["full"] }
h2 = "0.4.2"
quinn = "0.10.2"

serialport = { version = "4.3.0", optional = true }
btleplug = { version = "0.11.5", optional = true }
rusb = { version = "0.9.4", optional = true }

sled = { version = "0.34.7", optional = true }
moka = { version = "0.12.5", features = ["future"], optional = true }

nix = { version = "0.28.0", features = ["process", "signal", "user"], optional = true }
seccomp-sys = { version = "0.1.3", optional = true }

tungstenite = "0.21.0"
tokio-tungstenite = "0.21.0"

flate2 = "1.0.28"
brotli = "3.4.0"
zstd = "0.13.0"

tracy-client = { version = "0.16.4", optional = true }

fastrand = "2"
rand = "0.8"
bincode = "1.3"
base64 = "0.22.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Console"
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.153"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
proptest = "1.4.0"
tempfile = "3.9.0"
pretty_assertions = "1.4.0"
tokio-test = "0.4.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false

[profile.release-with-debug]
inherits = "release"
debug = 2
strip = "none"

[profile.bench]
inherits = "release"
debug = 2
lto = "thin"

[profile.dev]
opt-level = 1
debug = 2
overflow-checks = true
incremental = true

[profile.test]
opt-level = 1
debug = 2

[workspace]
resolver = "2"
